fix: Java 8 compat — isBlank() → trim().isEmpty(), repeat() → StringBuilder